@@ -6,6 +6,9 @@ Branch-39 Snapshot (Unreleased)
 
     HDFS-4076. Support snapshot of single files.  
 
+    HDFS-4083. Protocol changes for snapshots. (suresh)
+
+    HDFS-4077. Add support for Snapshottable Directory. (Nicholas via suresh)
 
 Release 2.7.0 - UNRELEASED
 
